# djok

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
apps/accounts/: models.py
config/: settings.py  urls.py
