[project]
name = "djeff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6",
    "django-allauth>=65.7.0",
    "django-debug-toolbar>=5.1.0",
    "django-environ>=0.12.0,<1",
    "django-structlog>=9.1.0,<10",
    "django-typer>=3.1.0,<4",
    "pytest-django>=4.11.1,<5",
    "rich>=14.0.0",
    "ruff>=0.11.4",
    "whitenoise>=6.9.0,<7",
]

